<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="#22E286"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="45dp"
            android:text="@string/taom_qo_shish"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/taom_nomi_edt"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:background="#DED7D7"
        android:hint="@string/taom_nomi"
        android:textColor="@color/black"
        android:textColorHint="#8E8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/kerakli_mahsulotlar_edt"
        android:layout_width="304dp"
        android:layout_height="108dp"
        android:background="#DED7D7"
        android:hint="@string/kerakli_mahsulotlar"
        android:textColor="@color/black"
        android:textColorHint="#8E8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <EditText
        android:id="@+id/taom_tayorlanish_tartibi_edt"
        android:layout_width="304dp"
        android:layout_height="274dp"
        android:background="#DED7D7"
        android:hint="@string/taom_tayyorlanish_tartibi"
        android:textColor="@color/black"
        android:textColorHint="#8E8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/Saqlash"
        android:layout_width="136dp"
        android:layout_height="59dp"
        android:backgroundTint="#22E286"
        android:text="@string/saqlash"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>