<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E5E5E5"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/ovqat_nomi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/palov"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kerakli_mahsulotlar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/kerakli_mahsulotlar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kerakli_mahsulotlar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/taom_tayyorlanish_tartibi"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/taom_tayorlanish_tartibi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kerakli_mahsulotlar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>
</ScrollView>